pl 22
	- fixed "already have a Beam" error

pl 21.jcn2
	- gnossienne: hmm, how to 
	  * undisplay bars
	  * don't put 'grace notes' in beam
	  * put separator between  "] \translator Staff=x" 

pl 21.jcn1
	- gnossienne-4.ly (start of)

pl 20.jcn2
	- mutopia fixes; see preludes-1.ly for cross-staff beams and slurs
	- bf: broken interstaff slur
	- sm66: check for gmake

*******
pl 20.jcn1
	- interstaff slurs v0: preludes-1.ly
	- warnings for silly interbeam settings

pl 20.hwn1
	- inclusion of WIP article about LilyPond.
	- L.Mozart sinfonfia
	- bf: [c8 [c8 c8]

********
pl 20

pl 19.jcn5
	- interstaff beams v0: see beam-interstaff.ly and wtk1-fugue2.ly

pl 19.jcn4
	- new stem/beam parameters
	- bf: forced stem shorten

pl 19.jcn3
	- dehairification of beam code; cleanup and bugfixes
	  * stemlength
	  * forced stem shorten
	  * slope calculation
	  * damping and correction
	  * catch for silly beams: input/test/beam-suspect.ly

pl 19.jcn2
	- multi-measure-rest is now spanner SkipBars=0 is broken

pl 19.jcn1
	- hmm, almost centered whole-bar rests -- NOT

********
pl 18.jcn5
	- bf: beamtrend
	- bf: vv-duet

pl 18.mb1
         - \mark now works, using G_staff_side_item.
 	- Improved layout of multi-bar rests, including a new
 	  font symbol.

pl 18.jcn4
	- beam length adjustments
	- ugly beamtrend fix: input/test/beam-trend.ly

pl 18.jcn3
	- bf: (beamed) forced stem shorten
	- bf: broken slurs and ties; minimal slur/tie length setting ignored
	- bf: separators on cygwin

pl 18.jcn2
 	- bf: stem-length algorithm
 	- bf: beam direction algorithm
 	- bf's: wtk1-fugue2.ly

pl 18.jcn1
 	- stepmake update
 	- small fixes: spacing.ly, wtk1-fugue2-ly, violino-viola duet.
 
*******
pl 18 (jan 4 '99)

pl 17.jbr2
        - Documentation/README-W32: Brought my stuff up to date
        - Documentation/ntweb: updated for realease
        - stepmake/bin/package-zip32.sh: cygwin-b20 changes
        - scripts/ly2dvi.py: LILYPONDPREFIX fixes

pl 17.jbr1