@@ -1,3 +1,7 @@
+pl 22.jcn1
+	- bf's: cross-staff slur
+	- bf: gnossienne-4
+
 pl 22
 	- fixed "already have a Beam" error
 
